slightly improve instructions and CI

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,5 +12,6 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - name: Check SSH key fingerprint
-        run: [ "$(ssh-keygen -l -f ssh_keys/id_ed25519.pub | awk '{print $2}')" = "$(head -1 ssh_keys/id_ed25519_fingerprint.txt)" ]
-
+        run: |
+          (ssh-keygen -l -f ssh_keys/id_ed25519.pub | awk '{print $2}') > tmp.txt
+          diff -b tmp.txt ssh_keys/id_ed25519_fingerprint.txt
